# ALC-2019.1

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
include/: Definitions.hpp  Differentials.hpp  Exception.hpp  Generators.hpp  Integration.hpp  LinearAlgebra.hpp  Matrix.hpp  SqMatrix.hpp  Vector.hpp  main.hpp
src/: Differentials.cpp  Generators.cpp  Integration.cpp  LagrangeGenerator.cpp  LinearAlgebra.cpp  Matrix.cpp  SqMatrix.cpp  Vector.cpp  main.cpp  quadrature_abscissae_weights.cpp  quadrature_weights_abscissae.cpp
test/: Differentials.cpp  Integration.cpp  LinearAlgebra.cpp  Matrix.cpp
